--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -21,7 +21,7 @@
         (function() {
             var hm = document.createElement("script");
             hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
-            var s = document.getElementsByTagName("script")[0]; 
+            var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
@@ -65,7 +65,7 @@
 
 
             <!-- Start Content-->
-            <div class="container-fluid">
+            <div class="container-fluid" style="margin-bottom: 100px;">
 
                 @RenderBody()
 
