--- a/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
@@ -5,11 +5,6 @@
     <div class="collapse navbar-collapse" id="topnav-menu-content">
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle arrow-none" href="/" id="topnav-dashboards" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="uil-dashboard me-1"></i>首页
-                </a>
-            </li>
-            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle arrow-none" href="/tools" id="topnav-apps" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="uil-apps me-1"></i>工具
                     <div class="arrow-down"></div>
@@ -84,7 +79,7 @@
                     <div class="arrow-down"></div>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="topnav-layouts">
-                    <a href="index.html" class="dropdown-item">关于</a>
+                    <a href="/about" class="dropdown-item">关于</a>
                     <a href="layouts-detached.html" class="dropdown-item">站点地图</a>
                     <a href="layouts-horizontal.html" class="dropdown-item">标签云</a>
                     <a href="layouts-full.html" class="dropdown-item">隐私</a>
