--- a/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -2,8 +2,8 @@
 
 <div style="text-align: center">
     <div class="footer-links d-none d-md-block">
-        <a href="javascript: void(0);">关于</a>
-        <a href="javascript: void(0);">支持</a>
+        <a href="/about">关于</a>
+        <a href="/donation">赞助</a>
         <a href="javascript: void(0);">联系</a>
     </div>
 
