--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Markdig
+﻿@using Dotnet9.Web.Utils
 @model Dotnet9.Web.ViewModels.Blogs.BlogPostViewModel
 @{
     ViewData["Title"] = Model.BlogPost.Title;
@@ -38,7 +38,7 @@
     </ul>
     <div class="tab-content">
         <div class="tab-pane show active" id="simple-preview">
-            @Html.Raw(Markdown.ToHtml(Model.BlogPost.Content))
+            @Html.Raw(MarkdownHelper.Render(Model.BlogPost.Content))
         </div> <!-- end preview-->
 
         <div class="tab-pane" id="simple-code">
