--- a/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -4,7 +4,7 @@
     <div class="footer-links d-none d-md-block">
         <a href="/about">关于</a>
         <a href="/donation">赞助</a>
-        <a href="javascript: void(0);">联系</a>
+        <a href="/timeline">时间轴</a>
     </div>
 
     <div class="footer-links d-none d-md-block">
