--- a/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
@@ -81,6 +81,7 @@
                 <div class="dropdown-menu" aria-labelledby="topnav-layouts">
                     <a href="/about" class="dropdown-item">关于</a>
                     <a href="/donation" class="dropdown-item">赞助</a>
+                    <a href="/timeline" class="dropdown-item">时间轴</a>
                     <a href="layouts-detached.html" class="dropdown-item">站点地图</a>
                     <a href="layouts-horizontal.html" class="dropdown-item">标签云</a>
                     <a href="layouts-full.html" class="dropdown-item">隐私</a>
