--- a/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -5,6 +5,7 @@
         <a href="/about">关于</a>
         <a href="/donation">赞助</a>
         <a href="/timeline">时间轴</a>
+        <a href="/sitemap.xml">站点地图</a>
     </div>
 
     <div class="footer-links d-none d-md-block">
