--- a/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
@@ -47,29 +47,6 @@
                             @await Html.PartialAsync("/Views/Category/MenuHorizontalItem.cshtml", category)
                         }
                     }
-                    @*<div class="dropdown">
-                        <a class="dropdown-item dropdown-toggle arrow-none" href="/cat/dotnet" id="topnav-auth" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dotnet
-                            <div class="arrow-down"></div>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="topnav-auth">
-                            <a href="pages-login.html" class="dropdown-item">WPF</a>
-                            <a href="pages-login-2.html" class="dropdown-item">Winform</a>
-                            <a href="pages-register.html" class="dropdown-item">MVC</a>
-                            <a href="pages-register-2.html" class="dropdown-item">Blazor</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a class="dropdown-item dropdown-toggle arrow-none" href="/cat/front" id="topnav-error" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            前端
-                            <div class="arrow-down"></div>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="topnav-error">
-                            <a href="pages-404.html" class="dropdown-item">Bootstrap</a>
-                            <a href="pages-404-alt.html" class="dropdown-item">React</a>
-                            <a href="pages-500.html" class="dropdown-item">Vue</a>
-                        </div>
-                    </div>*@
                 </div>
             </li>
 
@@ -82,7 +59,7 @@
                     <a href="/about" class="dropdown-item">关于</a>
                     <a href="/donation" class="dropdown-item">赞助</a>
                     <a href="/timeline" class="dropdown-item">时间轴</a>
-                    <a href="layouts-detached.html" class="dropdown-item">站点地图</a>
+                    <a href="/sitemap.xml" class="dropdown-item">站点地图</a>
                     <a href="layouts-horizontal.html" class="dropdown-item">标签云</a>
                     <a href="layouts-full.html" class="dropdown-item">隐私</a>
                 </div>
