--- a/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -6,6 +6,7 @@
         <a href="/donation">赞助</a>
         <a href="/timeline">时间轴</a>
         <a href="/sitemap.xml">站点地图</a>
+        <a href="/privacy">隐私政策</a>
     </div>
 
     <div class="footer-links d-none d-md-block">
