--- a/src/Dotnet9.Web/Views/Donation/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Donation/Index.cshtml
@@ -19,6 +19,15 @@
     <link rel="stylesheet" href="~/css/markdown.css">
 }
 
+<div class="card ribbon-box">
+    <div class="card-body">
+        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 赞助</div>
+        <p class="ribbon-content">
+            建站不易，谢谢支持。
+        </p>
+    </div> <!-- end card-body -->
+</div> <!-- end card-->
+
 @if (Model.Donation != null)
 {
     @Html.Raw(MarkdownHelper.Render(Model.Donation.Content))
