--- a/src/Dotnet9.Web/Views/Album/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Album/Index.cshtml
@@ -14,31 +14,4 @@
     </div> <!-- end card-body -->
 </div> <!-- end card-->
 
-
-<div class="row">
-    <div class="col-12">
-        <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-3">
-            @foreach (var blogPost in Model.Items)
-            {
-                <div class="col">
-                    <div class="card">
-                        <a href="/@blogPost.CreateDate?.ToString("yyyy/MM")/@blogPost.Slug">
-                            <img src="@blogPost.Cover" class="card-img-top" alt="@blogPost.Title">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <a style="color: #262626;" href="/@blogPost.CreateDate?.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.Title</a>
-                            </h5>
-                            <p class="card-text">
-                                <a style="color: #262626;" href="/@blogPost.CreateDate?.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.BriefDescription</a>
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted"><a href="/user/@(blogPost.Original ?? "沙漠尽头的狼")">@(blogPost.Original ?? "沙漠尽头的狼")</a> - @blogPost.CreateDate?.ToString("yyyy-MM-dd HH:mm:ss")</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div> <!-- end col-->
-</div>
+@await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.Items)
