--- a/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
@@ -60,7 +60,7 @@
                     <a href="/donation" class="dropdown-item">赞助</a>
                     <a href="/timeline" class="dropdown-item">时间轴</a>
                     <a href="/sitemap.xml" class="dropdown-item">站点地图</a>
-                    <a href="layouts-horizontal.html" class="dropdown-item">标签云</a>
+                    <a href="/tag" class="dropdown-item">标签云</a>
                     <a href="/privacy" class="dropdown-item">隐私政策</a>
                 </div>
             </li>
