--- a/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -24,7 +24,7 @@
     2019~<script>document.write(new Date().getFullYear())</script> © 沙漠尽头的狼 - Dotnet9.com 版权所有 <a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow noopener">蜀ICP备19038256号-1</a> 由 <a href="https://docs.microsoft.com/zh-cn/aspnet/core/mvc/overview?WT.mc_id=dotnet-35129-website&view=aspnetcore-7.0" target="_blank" rel="noopener">ASP.NET Core MVC 7.0 强力驱动</a>
 </div>
 <div style="text-align: center">
-    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278208054'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278208054%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278208054'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278208054%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
 <div style="text-align: center">
     当您访问我们的网站、服务或工具或与之互动时，我们或我们授权的服务提供商可能会使用cookie存储信息，以帮助为您提供更好、更快和更安全的体验，并用于营销目的。
