Add list of recommended blog posts;

--- a/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dotnet9.Web.ViewModels.FooterViewModel
+﻿@model Dotnet9.Web.ViewModels.Homes.FooterViewModel
 
 <div style="text-align: center">
     <div class="footer-links d-none d-md-block">
