--- a/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dotnet9.Web.ViewModels.NavigationMenuViewModel
+﻿@model Dotnet9.Web.ViewModels.Homes.NavigationMenuViewModel
 
 <nav class="navbar navbar-dark navbar-expand-lg topnav-menu">
 
