--- a/src/Dotnet9.Web/Views/Shared/Components/ToolBar/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/ToolBar/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model Dotnet9.Web.ViewModels.ToolBarViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model Dotnet9.Web.ViewModels.Homes.ToolBarViewModel
 
 <ul class="list-unstyled topbar-menu float-end mb-0">
 
