--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Dotnet9.Web.ViewModels.Homes.HomeViewModel
+@{
     ViewData["Title"] = "首页";
     Layout = "_PublicLayout";
 }
@@ -77,6 +78,20 @@
 
     </div>
 </section>
+
+<div class="card ribbon-box">
+    <div class="card-body">
+        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 站长推荐</div>
+        <a href="/recommend">
+            <h5 class="text-primary float-end mt-0">浏览更多</h5>
+        </a>
+        <p class="ribbon-content">
+            站长推荐的一些优秀开源项目
+        </p>
+    </div> <!-- end card-body -->
+</div> <!-- end card-->
+
+@await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.BlogPostsForRecommend)
 
 <h2 class="my-4">博文</h2>
 
