--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Dotnet9.Web.ViewModels.Blogs
-@model Dotnet9.Web.ViewModels.Homes.HomeViewModel
+﻿@model Dotnet9.Web.ViewModels.Homes.HomeViewModel
 @{
     ViewData["Title"] = "首页";
     Layout = "_PublicLayout";
@@ -94,19 +93,7 @@
 
 @await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.BlogPostsForRecommend)
 
-@foreach (var loadMoreKind in Model.LoadMoreKinds)
-{
-    <div class="card ribbon-box">
-        <div class="card-body">
-            <div class="ribbon ribbon-primary float-start">
-                <i class="mdi mdi-access-point me-1"></i> @loadMoreKind.Key
-            </div>
-        </div> <!-- end card-body -->
-    </div>
-    <!-- end card-->
-
-    @await Html.PartialAsync("/Views/BlogPost/Latest.cshtml", loadMoreKind.Value)
-}
+@await Html.PartialAsync("/Views/Home/RecommendBlogPost.cshtml", Model.LoadMoreKinds)
 
 <section>
     <h2 class="text-center my-4">常见问题</h2>
@@ -159,58 +146,3 @@
     </ul>
     <img src="https://img1.Dotnet9.com/site/wechatpublic.jpg" width="200" alt="wpf-international" class="img-fluid"/>
 </section>
-
-
-<script type="text/javascript">
-
-    var kindPageDic = {
-        @(LoadMoreKind.Latest): 0,
-        @(LoadMoreKind.Dotnet): 0,
-        @(LoadMoreKind.Front): 0,
-        @(LoadMoreKind.Database): 0,
-        @(LoadMoreKind.MoreLanguage): 0,
-        @(LoadMoreKind.Course): 0,
-        @(LoadMoreKind.Other): 0
-    };
-    var kindInCallbackDic = {
-        @(LoadMoreKind.Latest): false,
-        @(LoadMoreKind.Dotnet): false,
-        @(LoadMoreKind.Front): false,
-        @(LoadMoreKind.Database): false,
-        @(LoadMoreKind.MoreLanguage): false,
-        @(LoadMoreKind.Course): false,
-        @(LoadMoreKind.Other): false
-    };
-
-    function loadMore(kind) {
-        if (kindPageDic[kind] <= -1 || kindInCallbackDic[kind]) {
-            return;
-        }
-
-        kindInCallbackDic[kind] = true;
-        kindPageDic[kind]++;
-        var loadMoreButton = '#' + kind + '-btn';
-        var loadMoreContainer = '#' + kind + '-container';
-        $(loadMoreButton).button("loading");
-        $.get('/latest?kind=' + kind + '&page=' + kindPageDic[kind],
-            function(data) {
-                if (data != '') {
-                    $(loadMoreContainer).append(data);
-                    $(loadMoreButton).button("reset");
-                } else {
-                    page = -1;
-                    $(loadMoreButton).prop('class', 'btn btn-outline-secondary');
-                    $(loadMoreButton).html('&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;没有更多数据了!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;');
-                }
-
-                kindInCallbackDic[kind] = false;
-            });
-    }
-
-    window.onload = function() {
-        for (var kind in kindPageDic) {
-            loadMore(kind);
-        }
-    };
-
-</script>
