--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -4,145 +4,146 @@
     Layout = "_PublicLayout";
 }
 
-<section class="text-center text-sm-start">
-    <div class="d-flex">
-        <div>
-            <h1>Dotnet<span class="text-warning">9</span></h1>
-            <h3 class="my-4">
-                一个专注.NET的网站，有博文、有免费在线工具
-            </h3>
+
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/Home/ContactSidebar.cshtml")
+                    @await Component.InvokeAsync("LatestBlogPosts")
+                </div>
+                <div class="page-aside-right">
+
+                    <section class="text-center text-sm-start">
+                        <div class="d-flex">
+                            <div>
+                                <h1>Dotnet<span class="text-warning">9</span></h1>
+                                <h3 class="my-4">
+                                    一个专注.NET的网站，有博文、有免费在线工具
+                                </h3>
+                            </div>
+                            <img src="https://img1.dotnet9.com/2022/03/0301.gif" alg="Dotnet9" class="w-50 d-none d-md-block"/>
+                        </div>
+                    </section>
+
+                    <section>
+                        <h2 class="mb-4">工具</h2>
+                        <div class="row g-4">
+
+                            <div class="col-md-6 col-lg-3">
+                                <div class="card bg-dark text-light">
+                                    <div class="card-body text-center">
+                                        <div class="card-title text-center">
+                                            Icon转换
+                                        </div>
+                                        <div class="card-text">
+                                            png、jpg、jpeg、tmp等一键转换Icon
+                                        </div>
+                                        <a href="https://dotnet9.com/ico" class="btn btn-primary mt-2">开发中</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 col-lg-3">
+                                <div class="card bg-secondary text-light">
+                                    <div class="card-body text-center">
+                                        <div class="card-title text-center">
+                                            时间戳转换
+                                        </div>
+                                        <div class="card-text">
+                                            在线时间戳转换
+                                        </div>
+                                        <a href="https://dotnet9.com/timestamp" class="btn btn-dark mt-2">开发中</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 col-lg-3">
+                                <div class="card bg-dark text-light">
+                                    <div class="card-body text-center">
+                                        <div class="card-title text-center">
+                                            正则表达式验证
+                                        </div>
+                                        <div class="card-text">
+                                            在线正则表达式验证
+                                        </div>
+                                        <a href="#" class="btn btn-primary mt-2">开发中</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 col-lg-3">
+                                <div class="card bg-secondary text-light">
+                                    <div class="card-body text-center">
+                                        <div class="card-title text-center">
+                                            更多工具
+                                        </div>
+                                        <div class="card-text">
+                                            一直在更新
+                                        </div>
+                                        <a href="https://dotnet9.com/timestamp" class="btn btn-dark mt-2">开发中</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </section>
+
+                    <div class="card ribbon-box">
+                        <div class="card-body">
+                            <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 站长推荐</div>
+                            <a href="/recommend">
+                                <h5 class="text-primary float-end mt-0">浏览更多</h5>
+                            </a>
+                            <p class="ribbon-content">
+                                站长推荐的一些优秀开源项目
+                            </p>
+                        </div> <!-- end card-body -->
+                    </div> <!-- end card-->
+
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.BlogPostsForRecommend)
+
+                    @await Html.PartialAsync("/Views/Home/RecommendBlogPost.cshtml", Model.LoadMoreKinds)
+
+                    <section>
+                        <h2 class="text-center my-4">常见问题</h2>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        1. 工具开源吗？
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    所有工具都在Github开源，放心使用：<a href="https://github.com/dotnet9/Dotnet9" alt="tool">https://github.com/dotnet9/Dotnet9</a>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                        2. 博客Markdown文件怎么获取？
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                    博客整理的Markdown文件地址：<a href="https://github.com/dotnet9/Assets.Dotnet9" alt="blog post">https://github.com/dotnet9/Assets.Dotnet9</a>，包括文章中的图片等资源都放在这个仓库中。
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                        3. 本站是否开源？
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    工具开源了，博文Markdown也是MIT协议，本站有理由不开源吗？仓库地址：<a href="https://github.com/dotnet9/Dotnet9" alt="site-open-source">https://github.com/dotnet9/Dotnet9</a>。
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                </div>
+            </div>
         </div>
-        <img src="https://img1.dotnet9.com/2022/03/0301.gif" alg="Dotnet9" class="w-50 d-none d-md-block"/>
     </div>
-</section>
-
-<section>
-    <h2 class="mb-4">工具</h2>
-    <div class="row g-4">
-
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-dark text-light">
-                <div class="card-body text-center">
-                    <div class="card-title text-center">
-                        Icon转换
-                    </div>
-                    <div class="card-text">
-                        png、jpg、jpeg、tmp等一键转换Icon
-                    </div>
-                    <a href="https://dotnet9.com/ico" class="btn btn-primary mt-2">开发中</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-secondary text-light">
-                <div class="card-body text-center">
-                    <div class="card-title text-center">
-                        时间戳转换
-                    </div>
-                    <div class="card-text">
-                        在线时间戳转换
-                    </div>
-                    <a href="https://dotnet9.com/timestamp" class="btn btn-dark mt-2">开发中</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-dark text-light">
-                <div class="card-body text-center">
-                    <div class="card-title text-center">
-                        正则表达式验证
-                    </div>
-                    <div class="card-text">
-                        在线正则表达式验证
-                    </div>
-                    <a href="#" class="btn btn-primary mt-2">开发中</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-secondary text-light">
-                <div class="card-body text-center">
-                    <div class="card-title text-center">
-                        更多工具
-                    </div>
-                    <div class="card-text">
-                        一直在更新
-                    </div>
-                    <a href="https://dotnet9.com/timestamp" class="btn btn-dark mt-2">开发中</a>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</section>
-
-<div class="card ribbon-box">
-    <div class="card-body">
-        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 站长推荐</div>
-        <a href="/recommend">
-            <h5 class="text-primary float-end mt-0">浏览更多</h5>
-        </a>
-        <p class="ribbon-content">
-            站长推荐的一些优秀开源项目
-        </p>
-    </div> <!-- end card-body -->
-</div> <!-- end card-->
-
-@await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.BlogPostsForRecommend)
-
-@await Html.PartialAsync("/Views/Home/RecommendBlogPost.cshtml", Model.LoadMoreKinds)
-
-<section>
-    <h2 class="text-center my-4">常见问题</h2>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    1. 工具开源吗？
-                </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                所有工具都在Github开源，放心使用：<a href="https://github.com/dotnet9/Dotnet9" alt="tool">https://github.com/dotnet9/Dotnet9</a>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    2. 博客Markdown文件怎么获取？
-                </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                博客整理的Markdown文件地址：<a href="https://github.com/dotnet9/Assets.Dotnet9" alt="blog post">https://github.com/dotnet9/Assets.Dotnet9</a>，包括文章中的图片等资源都放在这个仓库中。
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    3. 本站是否开源？
-                </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                工具开源了，博文Markdown也是MIT协议，本站有理由不开源吗？仓库地址：<a href="https://github.com/dotnet9/Dotnet9" alt="site-open-source">https://github.com/dotnet9/Dotnet9</a>。
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <h2 class="text-center my-4">联系我</h2>
-
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-            <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=iL6egdGSGCMPezcUyzMPEcs9qsllgwr-&jump_from=webapi">
-                <img border="0" src="https://pub.idqqimg.com/wpa/images/group.png" alt="Dotnet9软件技术交流" title="Dotnet9软件技术交流">
-            </a>
-        </li>
-        <li class="list-group-item">
-            微信公众号：Dotnet9
-        </li>
-    </ul>
-    <img src="https://img1.Dotnet9.com/site/wechatpublic.jpg" width="200" alt="wpf-international" class="img-fluid"/>
-</section>
+</div>
