--- a/src/Dotnet9.Web/Views/Category/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Category/Index.cshtml
@@ -3,15 +3,29 @@
     ViewData["Title"] = "分类";
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
 }
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                </div>
+                <div class="page-aside-right">
 
-<div class="card ribbon-box">
-    <div class="card-body">
-        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 分类 - @Model.Name</div>
-        <h5 class="text-primary float-end mt-0">浏览更多</h5>
-        <p class="ribbon-content">
-            分类功能，目的为了将同类文章聚集到一起，方便阅读与查看。
-        </p>
-    </div> <!-- end card-body -->
-</div> <!-- end card-->
+                    <div class="card ribbon-box">
+                        <div class="card-body">
+                            <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 分类 - @Model.Name</div>
+                            <h5 class="text-primary float-end mt-0">浏览更多</h5>
+                            <p class="ribbon-content">
+                                分类功能，目的为了将同类文章聚集到一起，方便阅读与查看。
+                            </p>
+                        </div> <!-- end card-body -->
+                    </div> <!-- end card-->
 
-@await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.Items)
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.Items)
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
