--- a/src/Dotnet9.Web/Views/Privacy/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Privacy/Index.cshtml
@@ -20,20 +20,33 @@
     <link rel="stylesheet" href="~/css/markdown.css">
 }
 
-<div class="card ribbon-box">
-    <div class="card-body">
-        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 隐私政策</div>
-        <p class="ribbon-content">
-            关于本站隐私政策，如有疑问可联系站长。
-        </p>
-    </div> <!-- end card-body -->
-</div> <!-- end card-->
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                </div>
+                <div class="page-aside-right">
 
-@if (Model.Privacy != null)
-{
-    @Html.Raw(MarkdownHelper.Render(Model.Privacy.Content))
-}
+                    <div class="card ribbon-box">
+                        <div class="card-body">
+                            <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 隐私政策</div>
+                            <p class="ribbon-content">
+                                关于本站隐私政策，如有疑问可联系站长。
+                            </p>
+                        </div> <!-- end card-body -->
+                    </div> <!-- end card-->
 
+                    @if (Model.Privacy != null)
+                    {
+                        @Html.Raw(MarkdownHelper.Render(Model.Privacy.Content))
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
 
