--- a/src/Dotnet9.Web/Views/Shared/Components/SidebarRight/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/SidebarRight/Default.cshtml
@@ -81,7 +81,7 @@
 
 </div>
 
-<script>
+@*<script>
     // cookie已经保存，刷新未生效，后面研究TODO
     var isDarkModeKey = "isDarkMode";
     var isFluidModeKey = "isFluidMode";
@@ -122,4 +122,4 @@
     window.onload = function() {
         setDefault();
     };
-</script>
+</script>*@
