--- a/src/Dotnet9.Web/Views/BlogPost/Query.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Query.cshtml
@@ -5,27 +5,40 @@
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
 }
 
-<h1>Query</h1>
-
-<div class="card ribbon-box">
-    <div class="card-body">
-        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 搜索</div>
-        <p class="ribbon-content">
-            @Model.Query
-        </p>
-    </div> <!-- end card-body -->
-</div> <!-- end card-->
-
 <div class="row">
     <div class="col-12">
-        <div id="blog-post-container" class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-3">
-        </div>
-    </div>
-</div>
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                </div>
+                <div class="page-aside-right">
 
-<div class="row">
-    <div class="col-12" style="margin-bottom: 50px; text-align: center;">
-        <button id="load-more-btn" class="btn btn-outline-primary" data-loading-text="正在加载..." onclick="loadMore()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;点击加载更多&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
+
+                    <div class="card ribbon-box">
+                        <div class="card-body">
+                            <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 搜索</div>
+                            <p class="ribbon-content">
+                                @Model.Query
+                            </p>
+                        </div> <!-- end card-body -->
+                    </div> <!-- end card-->
+
+                    <div class="row">
+                        <div class="col-12">
+                            <div id="blog-post-container" class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-3">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12" style="margin-bottom: 50px; text-align: center;">
+                            <button id="load-more-btn" class="btn btn-outline-primary" data-loading-text="正在加载..." onclick="loadMore()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;点击加载更多&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
