--- a/src/Dotnet9.Web/Views/BlogPost/Recommend.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Recommend.cshtml
@@ -4,15 +4,29 @@
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
 }
 
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                </div>
+                <div class="page-aside-right">
 
-<div class="card ribbon-box">
-    <div class="card-body">
-        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 站长推荐</div>
-        <h5 class="text-primary float-end mt-0">浏览更多</h5>
-        <p class="ribbon-content">
-            站长推荐的一些优秀开源项目
-        </p>
-    </div> <!-- end card-body -->
-</div> <!-- end card-->
+                    <div class="card ribbon-box">
+                        <div class="card-body">
+                            <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 站长推荐</div>
+                            <h5 class="text-primary float-end mt-0">浏览更多</h5>
+                            <p class="ribbon-content">
+                                站长推荐的一些优秀开源项目
+                            </p>
+                        </div> <!-- end card-body -->
+                    </div> <!-- end card-->
 
-@await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.BlogPostsForRecommend)
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostCardList.cshtml", Model.BlogPostsForRecommend)
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
