--- a/src/Dotnet9.Web/Views/Error/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Error/Index.cshtml
@@ -2,29 +2,42 @@
     ViewData["Title"] = "404错误";
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
 }
-
-<!-- start page title -->
 <div class="row">
     <div class="col-12">
-        <div class="page-title-box">
-            <h4 class="page-title">404错误</h4>
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                </div>
+                <div class="page-aside-right">
+
+                    <!-- start page title -->
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="page-title-box">
+                                <h4 class="page-title">404错误</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end page title -->
+
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4">
+                            <div class="text-center">
+                                <img src="~/images/file-searching.svg" height="90" alt="页面未找到图片">
+
+                                <h1 class="text-error mt-4">404</h1>
+                                <h4 class="text-uppercase text-danger mt-3">页面未找到</h4>
+                                <p class="text-muted mt-3">
+                                    看起来你可能拐错了方向。别担心，这里有一个也许能帮你重回正轨的小建议。
+                                </p>
+
+                                <a class="btn btn-info mt-3" href="/"><i class="mdi mdi-reply"></i> 返回首页</a>
+                            </div> <!-- end /.text-center-->
+                        </div> <!-- end col-->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<!-- end page title -->
-
-<div class="row justify-content-center">
-    <div class="col-lg-4">
-        <div class="text-center">
-            <img src="~/images/file-searching.svg" height="90" alt="页面未找到图片">
-
-            <h1 class="text-error mt-4">404</h1>
-            <h4 class="text-uppercase text-danger mt-3">页面未找到</h4>
-            <p class="text-muted mt-3">
-                看起来你可能拐错了方向。别担心，这里有一个也许能帮你重回正轨的小建议。
-            </p>
-
-            <a class="btn btn-info mt-3" href="/"><i class="mdi mdi-reply"></i> 返回首页</a>
-        </div> <!-- end /.text-center-->
-    </div> <!-- end col-->
 </div>
