--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -10,8 +10,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="page-aside-left">
-                    @await Html.PartialAsync("/Views/Home/ContactSidebar.cshtml")
-                    @await Component.InvokeAsync("LatestBlogPosts")
+                    @await Html.PartialAsync("/Views/Home/HomeSidebar.cshtml")
                 </div>
                 <div class="page-aside-right">
 
