--- a/src/Dotnet9.Web/Views/Timeline/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Timeline/Index.cshtml
@@ -4,57 +4,70 @@
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
 }
 
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="page-aside-left">
+                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                </div>
+                <div class="page-aside-right">
 
-<div class="card ribbon-box">
-    <div class="card-body">
-        <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 时间轴</div>
-        <p class="ribbon-content">
-            记录网站创建和运行过程中比较重要的时间点。
-        </p>
-    </div> <!-- end card-body -->
-</div> <!-- end card-->
+                    <div class="card ribbon-box">
+                        <div class="card-body">
+                            <div class="ribbon ribbon-primary float-start"><i class="mdi mdi-access-point me-1"></i> 时间轴</div>
+                            <p class="ribbon-content">
+                                记录网站创建和运行过程中比较重要的时间点。
+                            </p>
+                        </div> <!-- end card-body -->
+                    </div> <!-- end card-->
 
-@if (Model.Timelines != null)
-{
-    <div class="row">
-        <div class="col-12">
-            <div class="timeline" dir="ltr">
-
-
-                @foreach (var timelineGroup in Model.Timelines)
-                {
-                    <div class="timeline-show mb-3 text-center">
-                        <h5 class="m-0 time-show-name">@timelineGroup.Key</h5>
-                    </div>
-                    @foreach (var timeline in timelineGroup.Value)
+                    @if (Model.Timelines != null)
                     {
-                        <div class="timeline-lg-item timeline-item-@(timeline.Time.Month % 2 == 0 ? "left" : "right")">
-                            <div class="timeline-desk">
-                                <div class="timeline-box">
-                                    @if (timeline.Time.Month % 2 == 0)
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="timeline" dir="ltr">
+
+
+                                    @foreach (var timelineGroup in Model.Timelines)
                                     {
-                                        <span class="arrow-alt"></span>
+                                        <div class="timeline-show mb-3 text-center">
+                                            <h5 class="m-0 time-show-name">@timelineGroup.Key</h5>
+                                        </div>
+                                        @foreach (var timeline in timelineGroup.Value)
+                                        {
+                                            <div class="timeline-lg-item timeline-item-@(timeline.Time.Month % 2 == 0 ? "left" : "right")">
+                                                <div class="timeline-desk">
+                                                    <div class="timeline-box">
+                                                        @if (timeline.Time.Month % 2 == 0)
+                                                        {
+                                                            <span class="arrow-alt"></span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span class="arrow"></span>
+                                                        }
+                                                        <span class="timeline-icon">
+                                                            <i class="mdi mdi-adjust"></i>
+                                                        </span>
+                                                        <h4 class="mt-0 mb-1 font-16">@timeline.Title</h4>
+                                                        <p class="text-muted">
+                                                            <small>@timeline.Time.ToString("yyyy年MM月dd日")</small>
+                                                        </p>
+                                                        <p>@timeline.Content</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
                                     }
-                                    else
-                                    {
-                                        <span class="arrow"></span>
-                                    }
-                                    <span class="timeline-icon">
-                                        <i class="mdi mdi-adjust"></i>
-                                    </span>
-                                    <h4 class="mt-0 mb-1 font-16">@timeline.Title</h4>
-                                    <p class="text-muted">
-                                        <small>@timeline.Time.ToString("yyyy年MM月dd日")</small>
-                                    </p>
-                                    <p>@timeline.Content</p>
+
                                 </div>
-                            </div>
+                                <!-- end timeline -->
+                            </div> <!-- end col -->
                         </div>
                     }
-                }
-
+                </div>
             </div>
-            <!-- end timeline -->
-        </div> <!-- end col -->
+        </div>
     </div>
-}
+</div>
