fix blog post brief;

--- a/src/Dotnet9.Web/Views/Album/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Album/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dotnet9.Web.ViewModels.Albums.AlbumViewModel
+﻿@model Dotnet9.Application.Contracts.Albums.AlbumViewModel
 @{
     ViewData["Title"] = "专辑";
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
