--- a/src/Dotnet9.Web/Views/BlogPost/BlogPostCard.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/BlogPostCard.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dotnet9.Application.Contracts.Blogs.BlogPostWithDetailsDto
+﻿@model Dotnet9.Application.Contracts.Blogs.BlogPostBriefDto
 
 <div class="card">
     <a href="/@Model.CreateDate?.ToString("yyyy/MM")/@Model.Slug">
