--- a/src/Dotnet9.Web/Views/BlogPost/BlogPostCardList.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/BlogPostCardList.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Dotnet9.Application.Contracts.Blogs.BlogPostWithDetailsDto>
+﻿@model List<Dotnet9.Application.Contracts.Blogs.BlogPostBriefDto>
 
 <div class="row">
     <div class="col-12">
