--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Dotnet9.Web.Utils
-@model Dotnet9.Web.ViewModels.Blogs.BlogPostViewModel
+@model Dotnet9.Application.Contracts.Blogs.BlogPostViewModel
 @{
     ViewData["Title"] = Model.BlogPost.Title;
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
