--- a/src/Dotnet9.Web/Views/Category/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dotnet9.Web.ViewModels.Categories.CategoryViewModel
+﻿@model Dotnet9.Application.Contracts.Categories.CategoryViewModel
 @{
     ViewData["Title"] = "分类";
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
