--- a/src/Dotnet9.Web/Views/Tag/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Tag/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Net
-@model Dotnet9.Web.ViewModels.Tags.TagViewModel
+@model Dotnet9.Application.Contracts.Tags.TagViewModel
 @{
     ViewData["Title"] = "标签云";
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
